Agregando un div al index.html para hacer un banner o carrousel y modificaciones a estilos.css para el mismo

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
         </div>
     </header>
     <div class="contenedor">
-        
+        <div class="item banner">
+            .
+        </div>
         <aside class="item izq">
             <b>Panel a la izquierda</b>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, ea!</p>
