Banner genérico con solo html y css

--- a/index.html
+++ b/index.html
@@ -28,10 +28,54 @@
             </nav>
         </div>
     </header>
+    <div class="item banner">
+        <ul class="diapositivas">
+            <li class="diapositiva" id="diapositiva1">
+                <a href="#">
+                    <p class="leyenda">Especialidades</p>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/9/95/Medical_Care.jpg" alt="Especialidades">
+                </a>
+            </li>
+            <li class="diapositiva" id="diapositiva2">
+                <a href="#">
+                    <p class="leyenda">Servicios</p>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/9/95/Medical_Care.jpg" alt="Servicios">
+                </a>
+            </li>
+            <li class="diapositiva" id="diapositiva3">
+                <a href="#">
+                    <p class="leyenda">Laboratorio</p>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/9/95/Medical_Care.jpg" alt="Laboratorio">
+                </a>
+            </li>
+            <li class="diapositiva" id="diapositiva4">
+                <a href="#">
+                    <p class="leyenda">Turnos Online</p>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/9/95/Medical_Care.jpg" alt="Turnos Online">
+                </a>
+            </li>
+            <li class="diapositiva" id="diapositiva5">
+                <a href="#">
+                    <p class="leyenda">Contáctenos</p>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/9/95/Medical_Care.jpg" alt="Contáctenos">
+                </a>
+            </li>
+            <li class="diapositiva">
+                <a href="#">
+                    <p class="leyenda">Especialidades</p>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/9/95/Medical_Care.jpg" alt="Especialidades">
+                </a>
+            </li>
+        </ul>
+        <ul class="diapositivas-control">
+            <li><a href="#diapositiva1">&bullet;</a></li>
+            <li><a href="#diapositiva2">&bullet;</a></li>
+            <li><a href="#diapositiva3">&bullet;</a></li>
+            <li><a href="#diapositiva4">&bullet;</a></li>
+            <li><a href="#diapositiva5">&bullet;</a></li>
+        </ul>
+    </div>
     <div class="contenedor">
-        <div class="item banner">
-            .
-        </div>
         <aside class="item izq">
             <b>Panel a la izquierda</b>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, ea!</p>
