--- a/index.html
+++ b/index.html
@@ -13,19 +13,26 @@
 <body>
     <header>
         <div class="navbar">
-            <a href="#"><img class="logo" src="img/logo.svg" alt="Logo Clinica Azul"></a> 
-            <input type="checkbox" id="menu-bar">
-            <label class="icon-menu" for="menu-bar"></label>
-            <nav class="menu">
-                <ul>
-                    <li><a href="#">INICIO</a></li>
-                    <li><a href="#">INSTITUCIONAL</a></li>
-                    <li><a href="#">ESPECIALIDADES</a></li>
-                    <li><a href="#">SERVICIOS</a></li>
-                    <li><a href="#">PREGUNTAS FRECUENTES</a></li>
-                    <li><a href="#">CONTACTO</a></li>
-                </ul>
-            </nav>
+            <div class="logositio">
+                <a href="../index.html"><img class="logo" src="img/logo.svg" alt="Logo Clinica Azul"></a> 
+            </div>
+            <div class="logomenu">
+                <input type="checkbox" id="menu-bar">
+                <label id="mostrarmenu" onclick="mostrarMenu()" class="icon-menu" for="menu-bar"></label>  
+            </div>
+            <div class="menu" id="seccionmenu">
+                <nav>
+                    <ul>
+                        <li class="item-menu"><a href="#">INICIO</a></li>
+                        <li class="item-menu"><a href="#">INSTITUCIONAL</a></li>
+                        <li class="item-menu"><a href="#">ESPECIALIDADES</a></li>
+                        <li class="item-menu"><a href="#">SERVICIOS</a></li>
+                        <li class="item-menu"><a href="#">PREGUNTAS FRECUENTES</a></li>
+                        <li class="item-menu"><a href="#">CONTACTO</a></li>
+                    </ul>
+                </nav>
+            </div>  
+            
         </div>
     </header>
     <div class="contenedor">
@@ -69,5 +76,6 @@
             </div>
         </footer>
     </div>
+    <script src="../js/menu.js"></script>
 </body>
 </html>
