Editado Footer y Home

--- a/home.html
+++ b/home.html
@@ -40,22 +40,36 @@
         };
         
     </script>
-    <b>Contenido Principal del home</b>
+    <b class="destacado">SERVICIOS</b>
     <article>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, autem eos. Est nihil nesciunt, ullam suscipit nisi repudiandae quae corrupti!</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam saepe veritatis illum soluta at porro quo sint, doloremque adipisci voluptatem maiores quia? Quaerat eaque repellat nam officiis, tempora at minus!</p>
-
+        <ul>
+            <li><b>ECOGRAFIA -</b> wsp: 11122233344</li>
+            <li><b>GASTROENTEROLOGIA -</b> gastro@clinicaazul.com</li>
+            <li><b>HEMODINAMIA -</b> hemodinamia@clinicaazul.com</li>
+            <li><b>INTERNACIONES -</b> internaciones@clinicaazul.com</li>
+            <li><b>BACTERIOLOGIA -</b> bacteriologia@clinicaazul.com</li>
+            <li><b>LABORATORIO -</b> laboratorio@clinicaazul.com</li>
+            <li><b>MEDICINA NUCLEAR -</b> mn@clinicaazul.com - wsp: 11122233344</li>
+            <li><b>PEDIATRIA -</b> pediatria@clinicaazul.com</li>
+            <li><b>RAYOS -</b> rayos@clinicaazul.com</li>
+            <li><b>TOMOGRAFIA Y RESONANCIA -</b> tcyrm@clinicaazul.com - wsp: 11122233344</li>
+        </ul>
     </article>
     
     <article>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, autem eos. Est nihil nesciunt, ullam suscipit nisi repudiandae quae corrupti!</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam saepe veritatis illum soluta at porro quo sint, doloremque adipisci voluptatem maiores quia? Quaerat eaque repellat nam officiis, tempora at minus!</p>
-
+        <b class="destacado">CONSULTORIOS EXTERNOS - ESPECIALIDADES</b>
+        <ul>
+            <li><b>PLANTA BAJA -</b>Clínica, Urología,Psiquiatría, Psicología, Gastroenterología, Endocrinología - plantabaja@clinicaazul.com </li>
+            <li><b>PRIMER PISO -</b>Ginecología, Otorrinolaringología, Oncología, Nefrología, Neumología, Neurología, Oftalmología, Alergología, Nutrición -primerpiso@clinicaazul.com</li>
+            <li><b>SEGUNDO PISO -</b>Cardiología, Dermatología, Traumatología, Hematología - segundopiso@clinicaazul.com</li>
+            <li><b>TERCER PISO -</b>Cirugía General (cabeza y cuello, torácica, colón HPB), Cirugía Cardiovascular, Cirugía Plástica, Cirugía Bariátrica, Hepatología, Reumatología, Neumonologia y Espirometria, Dermatología, Neurocirugía, Infectologia- tercerpiso@clinicaazul.com</li>
+            <li><b>PEDIATRÍA, ENDOCRINOLOGÍA INFANTIL -</b>Consultas y recetas - clinicaazul@ipensa.com</li>
+        </ul>
     </article>
 
     <article>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, autem eos. Est nihil nesciunt, ullam suscipit nisi repudiandae quae corrupti!</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam saepe veritatis illum soluta at porro quo sint, doloremque adipisci voluptatem maiores quia? Quaerat eaque repellat nam officiis, tempora at minus!</p>
+        <img class="foto" src="../img/hospital.jpg" alt="Presidente de la institución" >
+        <p class="piefoto">Sede Central - Ciudad Esmeralda</p>
 
     </article>
 </div>
