--- a/especialidades.html
+++ b/especialidades.html
@@ -1,5 +1,8 @@
-<div>
+<divs>
     <b>Contenido Especialidades</b>
+    
+    <div class="output"></div>
+
     <article>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, autem eos. Est nihil nesciunt, ullam suscipit nisi repudiandae quae corrupti!</p>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam saepe veritatis illum soluta at porro quo sint, doloremque adipisci voluptatem maiores quia? Quaerat eaque repellat nam officiis, tempora at minus!</p>
