--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/estilos.css">
     <link rel="stylesheet" href="css/fontello.css">
     <script src="https://kit.fontawesome.com/dd671f0f2a.js" crossorigin="anonymous"></script>
+    
 </head>
 <body>
     <header>
@@ -25,7 +26,7 @@
                     <ul>
                         <li class="item-menu"><a onclick="cargarContenido('./home.html')" href="#">INICIO</a></li>
                         <li class="item-menu"><a onclick="cargarContenido('./institucional.html')" href="#">INSTITUCIONAL</a></li>
-                        <li class="item-menu"><a onclick="cargarContenido('./especialidades.html')" href="#">ESPECIALIDADES</a></li>
+                        <li class="item-menu"><a onclick="especialidades()" href="#">ESPECIALIDADES</a></li>
                         <li class="item-menu"><a onclick="cargarContenido('./servicios.html')" href="#">SERVICIOS</a></li>
                         <li class="item-menu"><a onclick="cargarContenido('./pregfrec.html')" href="#">PREGUNTAS FRECUENTES</a></li>
                         <li class="item-menu"><a onclick="cargarContenido('./contacto.html')" href="#">CONTACTO</a></li>
@@ -90,5 +91,6 @@
     </div>
     <script src="../js/menu.js"></script>
     <script src="../js/script.js"></script>
+    <script src="../js/googlesheets.js"></script>
 </body>
 </html>
