Nueva version especialidades

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <p>Recursos Humanos: recursoshumanos@clinicaazul.com</p>
                 </div>
                 <div>
-                    <b class="destacado">Ubicación</b>
+                    <p><b class="destacado">Ubicación</b></p>
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13590.380730470095!2d-61.941006228200806!3d-31.61755052866593!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95cae7ac9a957ee3%3A0xf942d5793291dd34!2sEsmeralda%2C%20Santa%20Fe!5e0!3m2!1ses!2sar!4v1664586617347!5m2!1ses!2sar" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
                 <div>
