Agregados servicios, faq y contacto

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                         <li class="item-menu"><a onclick="cargarContenido('./institucional.html')" href="#">INSTITUCIONAL</a></li>
                         <li class="item-menu"><a onclick="especialidades()" href="#">ESPECIALIDADES</a></li>
                         <li class="item-menu"><a onclick="cargarContenido('./servicios.html')" href="#">SERVICIOS</a></li>
-                        <li class="item-menu"><a onclick="cargarContenido('./pregfrec.html')" href="#">PREGUNTAS FRECUENTES</a></li>
-                        <li class="item-menu"><a onclick="cargarContenido('./contacto.html')" href="#">CONTACTO</a></li>
+                        <li class="item-menu"><a onclick="faq()" href="#">PREGUNTAS FRECUENTES</a></li>
+                        <li class="item-menu"><a onclick="contacto()" href="#">CONTACTO</a></li>
                     </ul>
                 </nav>
             </div>  
@@ -92,5 +92,7 @@
     <script src="../js/menu.js"></script>
     <script src="../js/script.js"></script>
     <script src="../js/googlesheets.js"></script>
+    <script src="../js/faq.js"></script>
+    <script src="../js/contacto.js"></script>
 </body>
 </html>
