--- a/pregfrec.html
+++ b/pregfrec.html
@@ -1,20 +1,65 @@
+<!-- No en uso ahora.  -->
 <div>
-    <b>Contenido Preguntas Frecuentes</b>
-    <article>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, autem eos. Est nihil nesciunt, ullam suscipit nisi repudiandae quae corrupti!</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam saepe veritatis illum soluta at porro quo sint, doloremque adipisci voluptatem maiores quia? Quaerat eaque repellat nam officiis, tempora at minus!</p>
-
-    </article>
-    
-    <article>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, autem eos. Est nihil nesciunt, ullam suscipit nisi repudiandae quae corrupti!</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam saepe veritatis illum soluta at porro quo sint, doloremque adipisci voluptatem maiores quia? Quaerat eaque repellat nam officiis, tempora at minus!</p>
-
-    </article>
-
-    <article>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, autem eos. Est nihil nesciunt, ullam suscipit nisi repudiandae quae corrupti!</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam saepe veritatis illum soluta at porro quo sint, doloremque adipisci voluptatem maiores quia? Quaerat eaque repellat nam officiis, tempora at minus!</p>
-
-    </article>
+    <p class="destacado">Preguntas Frecuentes</p>
+    <section class="faq-container">
+        <div class="faq-one">
+            <!-- faq question -->
+            <h3 class="faq-page">¿Qué documentación necesito para atenderme en la guardia?</h3><i class="fa-solid fa-caret-down"></i>
+            <!-- faq answer -->
+            <div class="faq-body">
+                <p>Si es afiliado a alguna obra social deberá presentar un bono categoría A. Si no cuenta con obra social deberá abonar la consulta, disponiendo de 48 hs. para tramitar el reintegro correspondiente.</p>
+            </div>
+        </div>
+        <hr class="hr-line">
+        <div class="faq-two">
+            <!-- faq question -->
+            <h3 class="faq-page">¿Dónde se entregan los resultados de los análisis y estudios?</h3><i class="fa-solid fa-caret-down"></i>
+            <!-- faq answer -->
+            <div class="faq-body">
+                <p>- Hematología: en secretaria consultorios PB de lunes a viernes de 8 a 20 hs.</p>
+                <p>- Papanicolau y Estudios Histopatológicos: en Asoc. de Profesionales de lunes a viernes de 8 a 18 hs.</p>
+                <p>- Estudios de Laboratorio: en Laboratorio de lunes a viernes de 15 a 19 hs.</p>    
+                <p>- Laboratorio de Bacteriología: en Laboratorio de lunes a viernes de 8 a 12 hs y de 14 a 19:30 hs. Sábados de 8 a 12 hs.</p>    
+                <p>- Estudios de Ecografía, Rayos X, Resonancia Magnética y Tomografía, Hemodinamia, Medicina Nuclear y Cardiología: en las Secretarías de los respectivos servicios.</p>
+            </div>
+        </div>
+        <hr class="hr-line">
+        <div class="faq-three">
+            <!-- faq question -->
+<h3 class="faq-page">¿Cuáles son los horarios de visita?</h3><i class="fa-solid fa-caret-down"></i>
+            <!-- faq answer -->
+            <div class="faq-body">
+                <p>- Internación General: de 10 a 11 hs. y de 18 a 19 hs.</p>
+                <p>- Unidad de Terapia Intensiva: 11:00 a 11:30 hs. y de 18:00 a 18:30 hs.</p>
+                <p>- Unidad Coronaria: 10:00 a 10:30 hs. y de 17:00 a 17:30 hs.</p>
+                <p>- Pediatría: 10:30 a 11:00 hs. y de 15:30 a 16:00 hs.</p> 
+                <p>- Neonatología: 11:00 a 11:30 hs. y de 16:00 a 16:30 hs.</p>
+            </div>
+        </div>
+        <hr class="hr-line">
+        <div class="faq-three">
+            <!-- faq question -->
+<h3 class="faq-page">¿Qué documentación debo presentar para realizar la visita al médico?</h3><i class="fa-solid fa-caret-down"></i>
+            <!-- faq answer -->
+            <div class="faq-body">
+                <p>Deberá presentar el bono de la obra social de la categoría que corresponda según el profesional y los estudios realizados que tengan relación con el tema de su consulta.</p>
+            </div>
+        </div>
+        <hr class="hr-line">
+        <div class="faq-three">
+            <!-- faq question -->
+<h3 class="faq-page">¿Qué documentación debo traer al momento de la internación?</h3><i class="fa-solid fa-caret-down"></i>
+            <!-- faq answer -->
+            <div class="faq-body">
+                <p>Original y fotocopia de:</p>
+                <ul>
+                    <li>Carnet de obra social del paciente.</li>
+                    <li>Fotocopia del último recibo de sueldo del titular, o de pago si es afiliado voluntario, del mes vigente.</li>
+                    <li>Fotocopia de DNI o LE/LC del paciente, 1º y 2º hoja y cambio de domicilio.</li>
+                    <li>Orden de internación.</li>
+                    <li>Estudios prequirúrgicos.</li>
+                </ul>
+            </div>
+        </div>
+    </section>
 </div>
