--- a/servicios.html
+++ b/servicios.html
@@ -1,20 +1,58 @@
 <div>
-    <b>Contenido Servicios</b>
-    <article>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, autem eos. Est nihil nesciunt, ullam suscipit nisi repudiandae quae corrupti!</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam saepe veritatis illum soluta at porro quo sint, doloremque adipisci voluptatem maiores quia? Quaerat eaque repellat nam officiis, tempora at minus!</p>
-
+    <b class="destacado">Servicios</b> 
+    <p>Le ofrecemos la mejor atención.</p> 
+    <div class="servicio">
+    <article class="servicio-item">
+        <i class="fa-solid fa-truck-medical"></i>
+        <div class="servicio-item-detalle">
+            <p><b>Urgencias las 24 hs.</b></p>
+            <p>Adultos y Pediátrica.</p>
+        </div>
+        
     </article>
-    
-    <article>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, autem eos. Est nihil nesciunt, ullam suscipit nisi repudiandae quae corrupti!</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam saepe veritatis illum soluta at porro quo sint, doloremque adipisci voluptatem maiores quia? Quaerat eaque repellat nam officiis, tempora at minus!</p>
-
+    <article class="servicio-item">
+        <i class="fa-solid fa-calendar-days"></i>
+        <div class="servicio-item-detalle">
+            <p><b>Gestión de Turnos vía WEB</b></p>
+            <p>La reserva de Turnos Online se encuentra disponible para aquellos pacientes que se hayan atendido previamente en IPENSA .</p>
+        </div>
     </article>
-
-    <article>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, autem eos. Est nihil nesciunt, ullam suscipit nisi repudiandae quae corrupti!</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam saepe veritatis illum soluta at porro quo sint, doloremque adipisci voluptatem maiores quia? Quaerat eaque repellat nam officiis, tempora at minus!</p>
-
+    <article class="servicio-item">
+        <i class="fa-solid fa-bed"></i>
+        <div class="servicio-item-detalle">
+            <p><b>Habitaciones</b></p>
+            <p>Totalmente equipadas, son sinónimo de cuidado hospitalario de primera, en un ambiente de gran confort.</p>
+        </div>
     </article>
+    <article class="servicio-item">
+        <i class="fa-solid fa-stethoscope"></i>
+        <div class="servicio-item-detalle">
+            <p><b>Equipamiento médico  de última generación</b></p>
+            <p>Unidades especializadas para la atención específica de pacientes.</p>
+        </div>
+    </article>
+    <article class="servicio-item">
+        <i class="fa-solid fa-mug-saucer"></i>
+        <p><b>Cafetería de 08 a 21hs</b></p>
+    </article>
+    <article class="servicio-item">
+        <i class="fa-solid fa-phone-volume"></i>
+        <p><b>Teléfonos Públicos</b></p>
+    </article>
+    <article class="servicio-item">
+        <i class="fa-solid fa-wifi"></i>
+        <p><b>Wifi libre en áreas comunes</b></p>
+    </article>
+    <article class="servicio-item">
+        <i class="fa-solid fa-square-h"></i>
+        <p><b>Hotelería 24hs</b></p>
+    </article>
+    <article class="servicio-item">
+        <i class="fa-solid fa-user-doctor"></i>
+        <div class="servicio-item-detalle">
+            <p><b>Atención de equipos interdisciplinarios</b></p>
+            <p>Es un conjunto de profesionales técnicos dedicados a la atención, evaluación, equipamiento y rehabilitación de los pacientes.</p>
+        </div>
+    </article>
+</div>
 </div>
