--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
             </div>
         </footer>
     </div>
-    <script src="../js/menu.js"></script>
-    <script src="../js/script.js"></script>
-    <script src="../js/googlesheets.js"></script>
-    <script src="../js/faq.js"></script>
-    <script src="../js/contacto.js"></script>
+    <script src="js/menu.js"></script>
+    <script src="js/script.js"></script>
+    <script src="js/googlesheets.js"></script>
+    <script src="js/faq.js"></script>
+    <script src="js/contacto.js"></script>
 </body>
 </html>
