--- a/institucional.html
+++ b/institucional.html
@@ -52,7 +52,7 @@
             Su principal misión es bregar por el correcto funcionamiento de Clínica Azul, y tratando de responder 
             siempre a las inquietudes de sus colaboradores, proveedores, pacientes y familiares.
         </p>
-        <img class="foto" src="../img/director.jpg" alt="Presidente de la institución" >
+        <img class="foto" src="img/director.jpg" alt="Presidente de la institución" >
         <p class="piefoto">Nuestro Presidente - Dr. Héctor Cain</p>
         <br>
         <ul>
