--- a/home.html
+++ b/home.html
@@ -68,7 +68,7 @@
     </article>
 
     <article>
-        <img class="foto" src="../img/hospital.jpg" alt="Presidente de la institución" >
+        <img class="foto" src="img/hospital.jpg" alt="Presidente de la institución" >
         <p class="piefoto">Sede Central - Ciudad Esmeralda</p>
 
     </article>
