--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <div class="navbar">
             <div class="logositio">
-                <a href="../index.html"><img class="logo" src="img/logo.svg" alt="Logo Clinica Azul"></a> 
+                <a href="index.html"><img class="logo" src="img/logo.svg" alt="Logo Clinica Azul"></a> 
             </div>
             <div class="logomenu">
                 <input type="checkbox" id="menu-bar">
